<resources>
    <string name="app_name">Детские кроссворды</string>
    <string name="answer_title">Вопрос %1$d, %2$d букв:\n%3$s</string>
    <string name="zip_download_link"><![CDATA[https://drive.google.com/uc?export=download&id=0B8tU6dTdHawETXk0NHVtUkp0VDg]]></string>
    <string name="level_string">Уровень</string>
    <string name="percent_string">%</string>
    <string name="app_name_formatted">Детские\nкроссворды</string>
    <string name="start_button">НАЧАТЬ!</string>
    <string name="no_crosswords_string">Кроссвордов нет&#8230;\nСкачайте через меню настроек.</string>
    <string name="settings_string">Настройки</string>
    <string name="questions_string">Вопросы</string>
    <string name="zip_file_name">raw.zip</string>
    <string name="json_extension">.json</string>
    <string name="resource_file_name_template">%1$s%2$d</string>
    <string name="crossword_file_name">crossword</string>
    <string name="answers_file_name">answers</string>
    <string name="chosen_crossword_string">chosenCrossword</string>
    <string name="main_developer">Разработчик Кудрявцев Дмитрий</string>
    <string name="helping_developer">При поддержке Кудрявцева Василия</string>
    <string name="version_string">Версия 76</string>
    <string name="about">О приложении</string>
    <string name="return_to_crosswords">ВЕРНУТЬСЯ К СПИСКУ КРОССВОРДОВ</string>
    <string name="congratulations">ПОЗДРАВЛЯЮ!</string>
    <string name="congratulations_string">Ты ответил правильно\n на все вопросы!</string>
    <string name="database_name">crosswordsAppDatabase</string>
    <string name="answers_table_name">answers</string>
    <string name="crossword_num_column_name">crossword_num</string>
    <string name="order_num_column_name">order_num</string>
    <string name="answer_column_name">answer</string>
    <string name="words_table_name">words</string>
    <string name="question_column_name">question</string>
    <string name="posx_column_name">posX</string>
    <string name="posy_column_name">posY</string>
    <string name="is_horizontal_column_name">is_horizontal</string>
</resources>
