<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.dbkudryavtsev.childrencrosswords.activities.AboutActivity">

    <TextView
        android:layout_marginTop="20dp"
        android:id="@+id/header"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/app_name_formatted"
        android:textSize="@dimen/launch_text_size"
        android:textAlignment="center"
        android:textColor="@android:color/black"/>

    <TextView
        android:id="@+id/develover_main"
        android:layout_marginTop="40dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/main_developer"
        android:textAlignment="center"
        android:textColor="@android:color/black"
        android:textSize="20sp"
        android:layout_below="@id/header"/>

    <TextView
        android:id="@+id/develover_help"
        android:layout_marginTop="20dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/helping_developer"
        android:textAlignment="center"
        android:textColor="@android:color/black"
        android:textSize="20sp"
        android:layout_below="@id/develover_main"/>

    <TextView
        android:id="@+id/version"
        android:layout_marginTop="10dp"
        android:layout_marginBottom="10dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/version_string"
        android:textAlignment="center"
        android:textColor="@android:color/black"
        android:textSize="20sp"
        android:layout_alignParentBottom="true"/>

</RelativeLayout>
