<?xml version="1.0" encoding="utf-8"?>
<FrameLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:animateLayoutChanges="true">

<RelativeLayout
    android:id="@+id/main_crossword_layout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:visibility="visible">

    <EditText
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:inputType="textPassword"
        android:id="@+id/input"/>

    <com.dbkudryavtsev.childrencrosswords.views.CrosswordView
        xmlns:android="http://schemas.android.com/apk/res/android"
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:id="@+id/crossword_view">
    </com.dbkudryavtsev.childrencrosswords.views.CrosswordView>

    <android.support.design.widget.FloatingActionButton
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:id="@+id/check_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="16dp"
        android:src="@drawable/ic_done"
        app:backgroundTint="@color/colorPrimaryDark"
        app:borderWidth="0dp"
        android:layout_alignParentBottom="true"
        android:layout_alignParentEnd="true"/>

</RelativeLayout>
    <RelativeLayout
        android:id="@+id/congrats_layout"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:visibility="gone"
        android:background="#dd000000">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/congratulations"
            android:layout_centerHorizontal="true"
            android:textSize="@dimen/launch_text_size"
            android:layout_marginTop="@dimen/big_margin"
            android:textColor="@color/white"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/congratulations_string"
            android:textColor="@color/white"
            android:layout_centerInParent="true"
            android:textAlignment="center"
            android:textSize="30sp"/>

        <Button
            android:id="@+id/return_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/return_to_crosswords"
            android:layout_alignParentBottom="true"
            android:layout_centerInParent="true"
            android:layout_marginBottom="@dimen/big_margin"/>

    </RelativeLayout>
</FrameLayout>